deploy: 568dac5b37d263bd509fddf0f843cffa6f7f73f9

--- a/page-list/index.html
+++ b/page-list/index.html
@@ -54,8 +54,8 @@
     <td>Tagged “recetas”</td>
   </tr>
   <tr>
-    <td><a href="/tags/vegano/"><code>/tags/vegano/</code></a></td>
-    <td>Tagged “vegano”</td>
+    <td><a href="/tags/vegetariano/"><code>/tags/vegetariano/</code></a></td>
+    <td>Tagged “vegetariano”</td>
   </tr>
   <tr>
     <td><a href="/tags/espanol/"><code>/tags/espanol/</code></a></td>
