--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Mario Sánchez&#39;s thoughts pile</title>
     <meta name="description" content="This is a place where I store random stuff I want to write and share for some reason">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/prism-base16-monokai.dark.css">
@@ -16,21 +16,31 @@
       <ul class="nav">
         <li class="nav-item"><a href="/">Home</a></li>
         <li class="nav-item"><a href="/posts/">Archive</a></li>
-        <li class="nav-item nav-item-active"><a href="/about/">About Me</a></li>
+        <li class="nav-item"><a href="/about/">About Me</a></li>
       </ul>
     </header>
 
-    <main>
-      <h1>Hi there,</h1> 
-<p>My name is Mario Sánchez and I'm 32 dude based in Sabadell (20 mins car from Barcelona).</p>
-<p>I do software for a living and sometimes just for fun, cook to relax, and play video games to disconnect</p>
-<p>This is my personal blog and as a bilingual person I will write post depending on the topic and my mood in english or spanish.</p>
-<p>Here you may find some posts about my hobbies, personal and professional experience that I want to or I don't mind to share and If you enjoy or find them useful somehow... Good for you!</p>
+    <main class="tmpl-home">
+      <table>
+  <thead>
+    <tr>
+      <th>URL</th>
+      <th>Page Title</th>
+    </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><a href="/tags/fermentados/"><code>/tags/fermentados/</code></a></td>
+    <td>Tagged “fermentados”</td>
+  </tr>
+  </tbody>
+</table>
+
 
     </main>
 
     <footer></footer>
 
-    <!-- Current page: /about/ -->
+    <!-- Current page: /page-list/1/ -->
   </body>
 </html>
